aggiunto init app

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "MEAN",
+  "name": "peg",
   "version": "1.0.0",
   "description": "A MEAN app that allows users to manage contact lists",
   "main": "server.js",
